service-mesh-prac/helloworld-virtualservice-100-v1.yaml
# file: helloworld-virtualservice-100-v1.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - "*"
  gateways:
  - helloworld-gateway
  http:
  - route:
    - destination:
        host: helloworld
        subset: v1
      weight: 0
    - destination:
        host: helloworld
        subset: v2
      weight: 100
